Add unit tests for all core modules
- LoaderSuite: config parsing, auth types, pagination styles, tables
- ParserSuite: OpenAPI spec parsing, schema extraction, array wrapping
- SchemaMapperSuite: type mapping, flattening, json path metadata
- ConverterSuite: JSON to Arrow conversion, extractRecords, null handling
- AuthSuite: bearer/basic/header auth injection, missing field errors
- PaginatorSuite: cursor/offset/link pagination with mock client, limit
- Add --add-opens JVM flag for Arrow on Java 17+
- Make RestClient non-final for test mocking

41 tests, all passing.

Closes #9